--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,10 @@
 <head>
     <title>Istoloyo</title>
     <meta charset="utf-8" />
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <link href="{{site.baseurl}}/css/style.css" rel="stylesheet" type="text/css" />
+    <link href="{{site.baseurl}}/css/syntax.css" rel="stylesheet" type="text/css" />
+    <link href="{{site.baseurl}}/css/font-awesome.css" rel="stylesheet" type="text/css" />
+    
     <meta name="viewport" content="width-device=width, initial-scale=1.0">
 </head>
     
