--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
 <nav><ul>
     <li><a href="{{site.baseurl}}/about.html">About</a></li>
-    <li><a href="{{site.baseurl}}/blog.html">Blog</a></li>
+    <li><a href="{{site.baseurl}}/index.html">Blog</a></li>
 </ul></nav>
