--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,14 @@
 ---
 layout: default
 ---
-<h1>{{page.title}}</h1>
 
-{{content}}
+<div class="content">
+    <article>
+            <header><h2>{{post.title}}</h2></a></header>
+            <footer class="postinfo"><p>by {{post.post_author}}, {{post.date | date: "%m/%d/%Y"}}</p></footer>
+            <div>
+                <p>{{content}}</p>
+            </div>
+        </article>
+    </div>
+
