change post layout

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,8 +4,8 @@ layout: default
 
 <div class="content">
     <article>
-            <header><h2>{{post.title}}</h2></a></header>
-            <footer class="postinfo"><p>by {{post.post_author}}, {{post.date | date: "%m/%d/%Y"}}</p></footer>
+            <header><h2>{{page.title}}</h2></a></header>
+            <footer class="postinfo"><p>by {{page.post_author}}, {{page.date | date: "%m/%d/%Y"}}</p></footer>
             <div>
                 <p>{{content}}</p>
             </div>
